		versions.
	Added ec.eval.MetaProblem
	Promoted 'evaluations' as a parameter for EvolutionState; now both
		SimpleEvolutionState and SteadyStateEvolutionState understand it
	In SteadyStateEvolution, the minimum number of evaluations must be
		equal to the sum of all individuals in the population (it
		used to be, incorrectly, just subpopulation 0).
	Bug fixes to comments of PAGIE1 and to implementation of PAGIE2.
		Thanks to Tom Helmuth <thelmuth@cs.umass.edu>
	Revision to SimpleEvaluator to allow for fine-grained multithreaded
		evaluation.  Slight tweaks to SteadyStateEvaluator to be
		consistent with it.  Thanks to Ralf Buschermöhle 
		<lobequadrat@googlemail.com> for the idea and impetus.
	Fixed minor documentation errors
	Added Khaled Talukder as a major contributor
	Added majority problem
	n-frac changed to n-fraction in BestSelection documentation and errors
	Removed hack in SlaveConnection
	Made parameters.exists(param) deprecated.  Updated RandomRestarts
	Fixed bug in duplicate retries on all vector individuals	
	KozaFitness checks for negative fitnesses now even though it should
		be impossible.
	missing maximize[] array restored in MultiobjectiveFitness
	missing randomWalkProbability[] array restored in IntegerVectorSpecies
	Added Lennard-Jones problem to ecsuite	
	nguyen-11 and nguyen-12 removed from Benchmarks, and nguyen-9 and
		nguyen-10 corrected in terms of range and sample points
	lunacek added to ecsuite
	Added mona
	NSGA2Fitness and SPEA2Fitness printing changed so auxillary elements
		are on their own lines and properly set up with preambles
	Revised pso package
	Added pso.params to ecsuite
	Added PSO section to the manual
	Reindented

22 Prerelease, Shmerelease

	A deprecated form of Individual.printIndividual(...) had an infinite loop
	Added reading/writing to Particle.  One gotcha is that because the global
		data is stored not in Particle but in PSOBreeder, it can't get
		written or read.
